--- a/site/programs-item.html
+++ b/site/programs-item.html
@@ -3,7 +3,8 @@
 <!--	Simple Communication-->
 <html>
   <head>
-    <title>ИП - Оборудование</title>
+    <title>ИП 
+    </title>
     <!-- Meta-->
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon.png">
